# OSPC-Laboratory-2

./: CMakeLists.txt  README.md  client_application.c
Laboratory-AKOS-2/app/: client_application.c  client_application.c.script  client_application.h
Laboratory-AKOS-2/demon/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  daemon.c  daemon.h  demon  gps_driver.c  gps_driver.h
core/: config.h  stuff.c  stuff.h
demon/: daemon.c  daemon.h
driver/: gps_driver.c  gps_driver.h
